--- a/src/layouts/LayoutMenu.astro
+++ b/src/layouts/LayoutMenu.astro
@@ -53,7 +53,7 @@ import LoadingScreen from '../components/LoadingScreen.astro';
           window.location.href = '/';
         } else {
           axios
-            .get('http://localhost:8000/backend/auth/checkCurrentSession.php', {
+            .get('https://estudiolucmar.com/backend/auth/checkCurrentSession.php', {
               withCredentials: true,
             })
             .then(function (response) {
