import.meta.env.PUBLIC_SUPABASE_URL;

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import '@capacitor-community/safe-area';
 
           <div class="w-full">
             <h1 class="font-sans font-bold text-4xl tracking-wide text-slate-800">Iniciar sesión</h1>
-            <LoginForm />
+            <LoginForm client:only="react" />
 
             <div class="login__footer text-neutral-700"></div>
           </div>
